# YTRecommender

./: .gitignore  README.md  content_getter.py  content_scraper.py  get_content.py  pyproject.toml  requirements.txt  scraper.py  validator.py
YTlib/: content_getter.py  content_scraper.py  get_content.py  test_content_scraper.py  utils.py
docs/superpowers/plans/: 2026-04-20-ytscraper-modernization.md
docs/superpowers/specs/: 2026-04-20-ytscraper-modernization-design.md
tests/: test_cli.py  test_download.py  test_metadata.py  test_models.py  test_ranking.py  test_search.py
ytscraper/: __main__.py  cli.py  download.py  metadata.py  models.py  ranking.py  search.py
